; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_indexer.c_write_at.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_indexer.c_write_at.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_10__ = type { i64 }

@GIT_PROT_WRITE = common dso_local global i32 0, align 4
@GIT_MAP_SHARED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_11__*, i8*, i64, i64)* @write_at to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_at(%struct.TYPE_11__* %0, i8* %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca %struct.TYPE_10__, align 8
  %16 = alloca i32, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %17 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_9__*, %struct.TYPE_9__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %10, align 4
  %23 = load i8*, i8** %7, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %25, label %28

25:                                               ; preds = %4
  %26 = load i64, i64* %9, align 8
  %27 = icmp ne i64 %26, 0
  br label %28

28:                                               ; preds = %25, %4
  %29 = phi i1 [ false, %4 ], [ %27, %25 ]
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert(i32 %30)
  %32 = call i32 @git__mmap_alignment(i64* %11)
  store i32 %32, i32* %16, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %28
  %35 = load i32, i32* %16, align 4
  store i32 %35, i32* %5, align 4
  br label %65

36:                                               ; preds = %28
  %37 = load i64, i64* %8, align 8
  %38 = load i64, i64* %11, align 8
  %39 = urem i64 %37, %38
  store i64 %39, i64* %12, align 8
  %40 = load i64, i64* %8, align 8
  %41 = load i64, i64* %12, align 8
  %42 = sub i64 %40, %41
  store i64 %42, i64* %13, align 8
  %43 = load i64, i64* %12, align 8
  %44 = load i64, i64* %9, align 8
  %45 = add i64 %43, %44
  %46 = load i32, i32* @GIT_PROT_WRITE, align 4
  %47 = load i32, i32* @GIT_MAP_SHARED, align 4
  %48 = load i32, i32* %10, align 4
  %49 = load i64, i64* %13, align 8
  %50 = call i32 @p_mmap(%struct.TYPE_10__* %15, i64 %45, i32 %46, i32 %47, i32 %48, i64 %49)
  store i32 %50, i32* %16, align 4
  %51 = icmp slt i32 %50, 0
  br i1 %51, label %52, label %54

52:                                               ; preds = %36
  %53 = load i32, i32* %16, align 4
  store i32 %53, i32* %5, align 4
  br label %65

54:                                               ; preds = %36
  %55 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %15, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = inttoptr i64 %56 to i8*
  store i8* %57, i8** %14, align 8
  %58 = load i8*, i8** %14, align 8
  %59 = load i64, i64* %12, align 8
  %60 = getelementptr inbounds i8, i8* %58, i64 %59
  %61 = load i8*, i8** %7, align 8
  %62 = load i64, i64* %9, align 8
  %63 = call i32 @memcpy(i8* %60, i8* %61, i64 %62)
  %64 = call i32 @p_munmap(%struct.TYPE_10__* %15)
  store i32 0, i32* %5, align 4
  br label %65

65:                                               ; preds = %54, %52, %34
  %66 = load i32, i32* %5, align 4
  ret i32 %66
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @git__mmap_alignment(i64*) #1

declare dso_local i32 @p_mmap(%struct.TYPE_10__*, i64, i32, i32, i32, i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i32 @p_munmap(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
